# vd_games_project

./: .gitignore  Makefile  main.py  pyproject.toml
VD_games/games/: calc.py  engine.py  gcd.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  __init__.py  vd_calc.py  vd_even.py  vd_gcd.py  vd_prime.py  vd_progression.py
