[project]
name = "vd-games-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vd-start = "VD_games.scripts.VD_main:main"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
